--- a/index5.html
+++ b/index5.html
@@ -302,4 +302,15 @@
       <h8>Veganner</h8>
 </div>
 	</footer>
+<script type="text/javascript">
+(function(w, d, a){
+    w.__beusablerumclient__ = {
+        load : function(src){
+            var b = d.createElement("script");
+            b.src = src; b.async=true; b.type = "text/javascript";
+            d.getElementsByTagName("head")[0].appendChild(b);
+        }
+    };w.__beusablerumclient__.load(a + "?url=" + encodeURIComponent(d.URL));
+})(window, document, "//rum.beusable.net/load/b221219e032426u531");
+</script>
 </body>
