--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
 .wrap img{
   width: 100%;
   height: 300px;
+  border-top-right-radius: 150px;
 }
 
 
@@ -204,6 +205,7 @@
 .wrap2 img{
   width: 100%;
   height: 420px;
+  border-top-left-radius: 150px;
 }
 
 
